Fix cart thumbnail images cropped: change object-fit from cover to contain

--- a/css/styles.css
+++ b/css/styles.css
@@ -608,7 +608,7 @@ button {
 
 .cart-item-img img {
   width: 100%; height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .cart-item-info {
